src/shmif/tui/lua/tui_lua.zig


// External functions from nbio.zig, tui_popen.zig, tui_lua_glob.zig
extern "c" fn alt_nbio_register(ctx: ?*lua_State, add: ?*const fn (c_int, mode_t, isize) callconv(.c) bool, remove_1: ?*const fn (c_int, mode_t, [*c]isize) callconv(.c) bool, err: ?*const fn (?*lua_State, c_int, isize, [*c]const u8) callconv(.c) void) void;
extern "c" fn alt_nbio_process_read(?*lua_State, [*c]struct_nonblock_io, bool) c_int;
extern "c" fn alt_nbio_open(?*lua_State) c_int;
extern "c" fn alt_nbio_nonblock_cloexec(fd: c_int, socket: bool) void;
extern "c" fn alt_nbio_socket(path: [*c]const u8, ns: c_int, out: [*c][*c]u8) c_int;
extern "c" fn alt_nbio_process_write(?*lua_State, [*c]struct_nonblock_io) c_int;
extern "c" fn alt_nbio_data_in(?*lua_State, isize) void;
extern "c" fn alt_nbio_data_out(?*lua_State, isize) void;
extern "c" fn alt_nbio_release() void;
extern "c" fn alt_nbio_import(L: ?*lua_State, fd: c_int, m: mode_t, dst: [*c][*c]struct_nonblock_io, unlink_fn: [*c][*c]u8) bool;
extern "c" fn alt_nbio_close(L: ?*lua_State, ibb: [*c][*c]struct_nonblock_io) c_int;
extern "c" fn tui_popen(L: ?*lua_State) c_int;
extern "c" fn tui_pid_status(L: ?*lua_State) c_int;
extern "c" fn tui_pid_signal(L: ?*lua_State) c_int;
extern "c" fn tui_popen_tbltoenv(L: ?*lua_State, ind: c_int) [*c][*c]u8;
extern "c" fn tui_popen_tbltoargv(L: ?*lua_State, ind: c_int) [*c][*c]u8;
extern "c" fn tui_pty_resize(L: ?*lua_State) c_int;
extern "c" fn tui_glob(L: ?*lua_State) c_int;
extern "c" fn luaL_checkbnumber(L: ?*lua_State, narg: c_int) lua_Number;

// Anonymous type helpers
// These avoid needing to name translate-c's union_unnamed_N / struct_unnamed_N
fn zeroUnnamed0() @TypeOf(@as(struct_tui_lmeta, undefined).unnamed_0) {
    return std.mem.zeroes(@TypeOf(@as(struct_tui_lmeta, undefined).unnamed_0));
}
fn zeroPending() [8]@TypeOf(@as(struct_tui_lmeta, undefined).pending[0]) {
    return std.mem.zeroes([8]@TypeOf(@as(struct_tui_lmeta, undefined).pending[0]));
}
fn zeroReadline() @TypeOf(@as(struct_widget_meta, undefined).unnamed_0.readline) {
    return std.mem.zeroes(@TypeOf(@as(struct_widget_meta, undefined).unnamed_0.readline));
}

// tui_screen_attr anonymous field type helpers
fn zeroAttrFc() @TypeOf(@as(struct_tui_screen_attr, undefined).unnamed_0) {
    return std.mem.zeroes(@TypeOf(@as(struct_tui_screen_attr, undefined).unnamed_0));
}
fn zeroAttrBc() @TypeOf(@as(struct_tui_screen_attr, undefined).unnamed_1) {
    return std.mem.zeroes(@TypeOf(@as(struct_tui_screen_attr, undefined).unnamed_1));
}
fn zeroAttrFlags() @TypeOf(@as(struct_tui_screen_attr, undefined).unnamed_2) {
    return std.mem.zeroes(@TypeOf(@as(struct_tui_screen_attr, undefined).unnamed_2));
}
// widget_meta anonymous union type helper
fn zeroWidgetUnion() @TypeOf(@as(struct_widget_meta, undefined).unnamed_0) {
    return std.mem.zeroes(@TypeOf(@as(struct_widget_meta, undefined).unnamed_0));
}

// End of header, function implementations follow

pub export fn ltui_inherit(L: ?*lua_State, conn: [*c]arcan_tui_conn, T: [*c]struct_tui_lmeta) ?*struct_tui_context {
    register_tuimeta(L);
    const meta: [*c]struct_tui_lmeta = @ptrCast(@alignCast(lua_newuserdata(L, @sizeOf(struct_tui_lmeta))));
    if (meta == null) {
        return null;
    }
    init_lmeta(L, meta, T);
    meta.*.tui_state = tui_lref(L, -1, "ltui_inherit", "1579", 7);
    synch_wd(meta);
    meta.*.cwd_fd = open(".", 0 | 16384);
    shared_cbcfg = struct_tui_cbcfg{
        .tag = @ptrCast(meta),
        .query_label = @ptrCast(@constCast(&query_label)),
        .input_label = @ptrCast(@constCast(&on_label)),
        .input_alabel = null,
        .input_mouse_motion = @ptrCast(@constCast(&on_mouse)),
        .input_mouse_button = @ptrCast(@constCast(&on_mouse_button)),
        .input_utf8 = @ptrCast(@constCast(&on_u8)),
        .input_key = @ptrCast(@constCast(&on_key)),
        .input_misc = @ptrCast(@constCast(&on_misc)),
        .state = @ptrCast(@constCast(&on_state)),
        .bchunk = @ptrCast(@constCast(&on_bchunk)),
        .vpaste = @ptrCast(@constCast(&on_vpaste)),
        .apaste = @ptrCast(@constCast(&on_apaste)),
        .tick = @ptrCast(@constCast(&on_tick)),
        .utf8 = @ptrCast(@constCast(&on_utf8_paste)),
        .resized = @ptrCast(@constCast(&on_resized)),
        .reset = @ptrCast(@constCast(&on_reset)),
        .geohint = @ptrCast(@constCast(&on_geohint)),
        .recolor = @ptrCast(@constCast(&on_recolor)),
        .subwindow = @ptrCast(@constCast(&on_subwindow)),
        .substitute = null,
        .resize = @ptrCast(@constCast(&on_resize)),
        .visibility = @ptrCast(@constCast(&on_visibility)),
        .exec_state = @ptrCast(@constCast(&on_exec_state)),
        .cli_command = @ptrCast(@constCast(&on_cli_command)),
        .seek_absolute = @ptrCast(@constCast(&on_seek_absolute)),
        .seek_relative = @ptrCast(@constCast(&on_seek_relative)),
        .message = @ptrCast(@constCast(&on_message)),
    };
    meta.*.href = @as(isize, @bitCast(@as(isize, -@as(c_int, 2))));
    if (lua_type(L, 3) == 5) {
        lua_getfield(L, 3, "handlers");
        if (lua_type(L, -1) == 5) {
            meta.*.href = tui_lref(L, -1, "ltui_inherit", "1624", 5);
            lua_settop(L, -1 - 1);
        } else {
            lua_settop(L, -1 - 1);
            return null;
        }
    }
    meta.*.unnamed_0.tui = arcan_tui_setup(conn, if (T != null) T.*.unnamed_0.tui else null, &shared_cbcfg, @sizeOf(struct_tui_cbcfg));
    if (meta.*.unnamed_0.tui == null) {
        lua_settop(L, -1 - 1);
        return null;
    }
    return meta.*.unnamed_0.tui;
}
pub export fn luaopen_arcantui(L: ?*lua_State) c_int {
    const luaarcantui: [4]struct_luaL_Reg = [4]struct_luaL_Reg{
        struct_luaL_Reg{
            .name = "APIVersion",
            .func = &apiversion,
        },
        struct_luaL_Reg{
            .name = "APIVersionString",
            .func = &apiversionstr,
        },
        struct_luaL_Reg{
            .name = "open",
            .func = &tui_open,
        },
        struct_luaL_Reg{
            .name = "create_local",
            .func = &tui_local,
        },
    };
    lua_createtable(L, 0, 0);
    {
        var i: usize = 0;
        while (i < (@sizeOf([4]struct_luaL_Reg) / @sizeOf(struct_luaL_Reg))) : (i +%= 1) {
            lua_pushstring(L, luaarcantui[i].name);
            lua_pushcclosure(L, luaarcantui[i].func, 0);
            lua_settable(L, -3);
        }
    }
    lua_pushlstring(L, "_COPYRIGHT", 10);
    lua_pushlstring(L, "Copyright (C) Bjorn Stahl", 25);
    lua_settable(L, -3);
    lua_pushlstring(L, "_DESCRIPTION", 12);
    lua_pushlstring(L, "TUI API for Arcan", 17);
    lua_settable(L, -3);
    lua_pushlstring(L, "_VERSION", 8);
    lua_pushlstring(L, "arcantuiapi 1.0.0", 17);
    lua_settable(L, -3);
    register_tuimeta(L);
    return 1;
}
// (struct/extern declarations removed — provided by header aliases)
const struct_unnamed_112 = extern struct {
    fdin: [32]c_int = std.mem.zeroes([32]c_int),
    fdin_tags: [32]isize = std.mem.zeroes([32]isize),
    fdin_used: usize = std.mem.zeroes(usize),
    fdout: [32]struct_pollfd = std.mem.zeroes([32]struct_pollfd),
    fdout_tags: [32]isize = std.mem.zeroes([32]isize),
    fdout_used: usize = std.mem.zeroes(usize),
};
pub var nbio_jobs: struct_unnamed_112 = std.mem.zeroes(struct_unnamed_112);
pub fn nbio_queue_bitmap(set: [*c]usize, map_arg: c_int) callconv(.c) usize {
    var map = map_arg;
    var count: usize = 0;
    while ((ffs(map) != 0) and (count < 32)) {
        const pos: c_int = ffs(map) - 1;
        map &= ~(@as(c_int, 1) << @intCast(pos));
        set[blk: {
            const ref = &count;
            const tmp = ref.*;
            ref.* +%= 1;
            break :blk tmp;
        }] = @as(usize, @bitCast(nbio_jobs.fdin_tags[@as(c_uint, @intCast(pos))]));
    }
    return count;
}
pub fn nbio_dequeue(fd: c_int, mode: mode_t, tag: [*c]isize) callconv(.c) bool {
    var found: bool = false;
    {
        var i: usize = 0;
        while ((mode == @as(mode_t, @bitCast(@as(c_int, 0)))) and (i < nbio_jobs.fdin_used)) : (i +%= 1) {
            if (nbio_jobs.fdin[i] == fd) {
                _ = memmove(@ptrCast(&nbio_jobs.fdin_tags[i]), @as(?*const anyopaque, @ptrCast(&nbio_jobs.fdin_tags[i +% 1])), (nbio_jobs.fdin_used -% i) *% @sizeOf(isize));
                _ = memmove(@ptrCast(&nbio_jobs.fdin[i]), @as(?*const anyopaque, @ptrCast(&nbio_jobs.fdin[i +% 1])), (nbio_jobs.fdin_used -% i) *% @sizeOf(c_int));
                nbio_jobs.fdin_used -%= 1;
                found = true;
                break;
            }
        }
    }
    {
        var i: usize = 0;
        while (i < nbio_jobs.fdout_used) : (i +%= 1) {
            if (nbio_jobs.fdout[i].fd == fd) {
                if (tag != null) {
                    tag.* = nbio_jobs.fdout_tags[i];
                }
                nbio_jobs.fdout_used -%= 1;
                _ = memmove(@ptrCast(&nbio_jobs.fdout_tags[i]), @as(?*const anyopaque, @ptrCast(&nbio_jobs.fdout_tags[i +% 1])), (nbio_jobs.fdout_used -% i) *% @sizeOf(isize));
                _ = memmove(@ptrCast(&nbio_jobs.fdout[i]), @as(?*const anyopaque, @ptrCast(&nbio_jobs.fdout[i +% 1])), (nbio_jobs.fdout_used -% i) *% @sizeOf(struct_pollfd));
                found = true;
                break;
            }
        }
    }
    return found;
}
pub fn nbio_queue(fd: c_int, mode: mode_t, tag: isize) callconv(.c) bool {
    if (fd == -1) return false;
    if (mode == @as(mode_t, @bitCast(@as(c_int, 0)))) {
        if (nbio_jobs.fdin_used >= 32) return false;
        nbio_jobs.fdin[nbio_jobs.fdin_used] = fd;
        nbio_jobs.fdin_tags[nbio_jobs.fdin_used] = tag;
        nbio_jobs.fdin_used +%= 1;
    }
    if (mode == @as(mode_t, @bitCast(@as(c_int, 1)))) {
        if (nbio_jobs.fdout_used >= 32) return false;
        nbio_jobs.fdout[nbio_jobs.fdout_used].fd = fd;
        nbio_jobs.fdout[nbio_jobs.fdout_used].events = @as(c_short, @bitCast(@as(c_short, @truncate((4 | 8) | 16))));
        nbio_jobs.fdout_tags[nbio_jobs.fdout_used] = tag;
        nbio_jobs.fdout_used +%= 1;
    }
    if ((mode != @as(mode_t, @bitCast(@as(c_int, 0)))) and (mode != @as(mode_t, @bitCast(@as(c_int, 1))))) {
        abort();
    }
    return true;
}
pub fn nbio_run_outbound(L: ?*lua_State) callconv(.c) void {
    var set: [32]isize = undefined;
    var count: c_int = 0;
    var pv: c_int = undefined;
    if (nbio_jobs.fdout_used == 0) return;
    if ((blk: {
        const tmp = poll(@ptrCast(@alignCast(&nbio_jobs.fdout[0])), nbio_jobs.fdout_used, 0);
        pv = tmp;
        break :blk tmp;
    }) > 0) {
        {
            var i: usize = 0;
            while ((i < nbio_jobs.fdout_used) and (pv != 0)) : (i +%= 1) {
                if (nbio_jobs.fdout[i].revents != 0) {
                    set[@as(c_uint, @intCast(blk: {
                        const ref = &count;
                        const tmp = ref.*;
                        ref.* += 1;
                        break :blk tmp;
                    }))] = nbio_jobs.fdout_tags[i];
                    pv -= 1;
                }
            }
        }
    }
    {
        var i: c_int = 0;
        while (i < count) : (i += 1) {
            alt_nbio_data_out(L, set[@as(c_uint, @intCast(i))]);
        }
    }
}
